@@ -19,17 +19,17 @@
 
         <!-- DO NOT DELETE!!! -->
         <dependency>
-            <groupId>jakarta.annotation</groupId>
-            <artifactId>jakarta.annotation-api</artifactId>
-            <version>1.3.5</version>
+            <groupId>org.jboss.spec.javax.annotation</groupId>
+            <artifactId>jboss-annotations-api_1.3_spec</artifactId>
+            <version>1.0.1.Final-redhat-1</version>
             <scope>provided</scope>
         </dependency>
 
         <!-- DO NOT DELETE!!! -->
         <dependency>
-            <groupId>jakarta.ws.rs</groupId>
-            <artifactId>jakarta.ws.rs-api</artifactId>
-            <version>2.1.6</version>
+            <groupId>org.jboss.spec.javax.ws.rs</groupId>
+            <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
+            <version>1.0.2.Final-redhat-00001</version>
             <scope>provided</scope>
         </dependency>
 
@@ -117,6 +117,21 @@
                 <version>2.0.2.Final</version>
                 <configuration>
                     <jboss-home>${project.basedir}/../wildfly-17.0.1.Final</jboss-home>
+                    <javaOpts>
+                        <javaOpt>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-modules=java.se</javaOpt>
+                        <javaOpt>--add-opens=java.base/java.lang=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-opens=java.base/java.io=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-opens=java.base/java.net=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-opens=java.base/java.security=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-opens=java.base/java.util=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-opens=java.management/javax.management=ALL-UNNAMED</javaOpt>
+                        <javaOpt>--add-opens=java.naming/javax.naming=ALL-UNNAMED</javaOpt>
+                    </javaOpts>
                 </configuration>
                 <executions>
                     <execution>
